compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__let_assert_string_prefix.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 179
expression: "\npub fn main() {\n  let assert \"Game \" <> id = \"Game 1\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let assert "Game " <> id = "Game 1"
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  let $ = "Game 1";
  let id;
  if ($.startsWith("Game ")) {
    id = $.slice(5);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 19, end: 54, pattern_start: 30, pattern_end: 43 }
    )
  }
  return $;
}
