compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__message.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 231
expression: "\npub fn unwrap_or_panic(value) {\n  let assert Ok(inner) = value as \"Oops, there was an error\"\n  inner\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn unwrap_or_panic(value) {
  let assert Ok(inner) = value as "Oops, there was an error"
  inner
}


----- COMPILED JAVASCRIPT
import { Ok, makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function unwrap_or_panic(value) {
  let inner;
  if (value instanceof Ok) {
    inner = value[0];
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "unwrap_or_panic",
      "Oops, there was an error",
      { value: value, start: 35, end: 63, pattern_start: 46, pattern_end: 55 }
    )
  }
  return inner;
}
