compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__module_const_var.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 153
expression: "\npub const int = 42\npub const int_alias = int\npub fn use_int_alias() { int_alias }\n\npub const compound: #(Int, Int) = #(int, int_alias)\npub fn use_compound() { compound.0 + compound.1 }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const int = 42
pub const int_alias = int
pub fn use_int_alias() { int_alias }

pub const compound: #(Int, Int) = #(int, int_alias)
pub fn use_compound() { compound.0 + compound.1 }


----- COMPILED JAVASCRIPT
export const int = 42;

export const int_alias = int;

export const compound = [int, int_alias];

export function use_int_alias() {
  return int_alias;
}

export function use_compound() {
  return compound[0] + compound[1];
}
