compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__module_const_var1.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 167
expression: "\npub const int = 42\npub const int_alias = int\npub const compound: #(Int, Int) = #(int, int_alias)\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const int = 42
pub const int_alias = int
pub const compound: #(Int, Int) = #(int, int_alias)


----- TYPESCRIPT DEFINITIONS
export const int: number;

export const int_alias: number;

export const compound: [number, number];
