compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__nested_binding.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 26
expression: "\npub fn go(x) {\n  let assert #(a, #(b, c, 2) as t, _, 1) = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert #(a, #(b, c, 2) as t, _, 1) = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let a;
  let t;
  let b;
  let c;
  let $ = x[3];
  if ($ === 1) {
    let $1 = x[1][2];
    if ($1 === 2) {
      a = x[0];
      t = x[1];
      b = x[1][0];
      c = x[1][1];
    } else {
      throw makeError(
        "let_assert",
        FILEPATH,
        "my/mod",
        3,
        "go",
        "Pattern match failed, no pattern matched the value.",
        { value: x, start: 18, end: 60, pattern_start: 29, pattern_end: 56 }
      )
    }
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 60, pattern_start: 29, pattern_end: 56 }
    )
  }
  return x;
}
