compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__rebound_function_and_arg.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 114
expression: "pub fn x() {\n  Nil\n}\n\npub fn main(x) {\n  let x = False\n  x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn x() {
  Nil
}

pub fn main(x) {
  let x = False
  x
}


----- COMPILED JAVASCRIPT
export function x() {
  return undefined;
}

export function main(x) {
  let x$1 = false;
  return x$1;
}
