compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__returning_literal_subject.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 83
expression: "pub fn go(x) { let assert 1 = x + 1 }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go(x) { let assert 1 = x + 1 }

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let $ = x + 1;
  if (!($ === 1)) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      1,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 15, end: 35, pattern_start: 26, pattern_end: 27 }
    )
  }
  return $;
}
