compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__tuple_matching.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 5
expression: "\npub fn go(x) {\n  let assert #(1, 2) = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert #(1, 2) = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let $ = x[0];
  if ($ === 1) {
    let $1 = x[1];
    if (!($1 === 2)) {
      throw makeError(
        "let_assert",
        FILEPATH,
        "my/mod",
        3,
        "go",
        "Pattern match failed, no pattern matched the value.",
        { value: x, start: 18, end: 40, pattern_start: 29, pattern_end: 36 }
      )
    }
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 40, pattern_start: 29, pattern_end: 36 }
    )
  }
  return x;
}
