compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__use_discard_assignment.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 339
expression: "\ntype Wibble {\n    Wibble(Int)\n    Wobble(Int)\n    Woo(Int)\n}\n\nfn fun(f) { f(Wibble(1)) }\n\npub fn go() {\n  use _ <- fun\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
    Wibble(Int)
    Wobble(Int)
    Woo(Int)
}

fn fun(f) { f(Wibble(1)) }

pub fn go() {
  use _ <- fun
  1
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

class Wibble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}

class Wobble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}

class Woo extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}

function fun(f) {
  return f(new Wibble(1));
}

export function go() {
  return fun((_) => { return 1; });
}
