compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__use_matching_assignment.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 359
expression: "\nfn fun(f) { f(#(2, 4)) }\n\npub fn go() {\n  use #(_, n) <- fun\n  n\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn fun(f) { f(#(2, 4)) }

pub fn go() {
  use #(_, n) <- fun
  n
}


----- COMPILED JAVASCRIPT
function fun(f) {
  return f([2, 4]);
}

export function go() {
  return fun(
    (_use0) => {
      let n;
      n = _use0[1];
      return n;
    },
  );
}
